--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html>
 <head>
 	<title> Personal Life</title>
-	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" type="text/css" href="style.scss">
 	<link href="https://fonts.googleapis.com/css?family=Crafty+Girls" rel="stylesheet">
 </head>
 <body>
 
 <section class="banner">
 	<div class="picture">
-		<img src="img2.jpg">
+		<img src="images/img2.jpg">
 	</div>
 	<div class="via">girlonfire </div>
 </section>
@@ -26,10 +26,37 @@
 </section>
 
 <section class="travel">
-	<div class="picture">
-		<img src="img1.jpg">
+	<div class="picture1">
+		<img src="images/img1.jpg">
 	</div>
 	<div class="travelname"> TRAVEL </div>
+	<div class="text1">
+		<p>“Wherever you go becomes a part of you somehow.” “Travel is fatal to prejudice, bigotry, and narrow-mindedness, and many of our people need it sorely on these accounts. Broad, wholesome, charitable views of men and things cannot be acquired by vegetating in one little corner of the earth all one's lifetime.”
+		</p>
+	</div>
+	<div class="friends">
+		<img src="images/pic5.jpg">
+	</div>
 </section>
+
+<section class="lifestyle">
+	<div class="picture2">
+		<img src="images/img20.jpg">
+	</div>
+	<div class="lifestylename"> LIFESTYLE </div>
+	<div class="text2">
+		<p>	Love myself I do. Not everything, but I love the good as well as the bad. I love my crazy lifestyle, and I love my hard discipline. I love my freedom of speech and the way my eyes get dark when I'm tired. I love that I have learned to trust people with my heart, even if it will get broken. I am proud of everything that I am and will become.
+		</p>
+	</div>
+</section>
+
+
+
+
+
+
+
+
+
 </body>
 </html>
