--- a/index.html
+++ b/index.html
@@ -2,92 +2,81 @@
 <html>
 <head>
 	<title> Personal Life</title>
-	<link rel="stylesheet" type="text/css" href="style.scss">
-	<link href="https://fonts.googleapis.com/css?family=Crafty+Girls" rel="stylesheet">
-</head>
+		<link rel="stylesheet" type="text/css" href="style.scss">
+			<link href="https://fonts.googleapis.com/css?family=Crafty+Girls" rel="stylesheet">
+	</head>
 <body>
 
-<section class="banner">
-	<div class="picture">
-		<img src="images/img2.jpg">
-	</div>
+	<section class="banner">
+		<div class="picture">
+			<img src="images/img2.jpg">
+		</div>
 		<div class="via">viasventura </div>
-</section>
+	</section>
 
-<section>
-	<nav class="pink">
-		<ul>
-			<a href="lifestyle.asp">TRAVEL</a> |
-  			<a href="travel.asp">LIFESTYLE</a> |
- 			<a href="food.asp">FOOD</a>|
-  			<a href="music.asp">MUSIC</a>
-  		</ul>
-	</nav>
-</section>
+	<section>
+		<nav class="pink">
+			<ul>
+				<a href="me.asp"> ABOUT</a> |
+  				<a href="lifestyle.asp">LIFESTYLE</a> |
+  				<a href="music.asp">MUSIC</a> |
+  				<a href="travel.asp">TRAVEL</a> 
+  			</ul>
+		</nav>
+	</section>
 
-<section class="travel">
-	<div class="picture1">
-		<img src="images/img1.jpg">
-	</div>
-		<div class="travelname"> TRAVEL </div>
-			<div class="text1">
-				<p>“Wherever you go becomes a part of you somehow.” “Travel is fatal to prejudice, bigotry, and narrow-mindedness, and many of our people need it sorely on these accounts. Broad, wholesome, charitable views of men and things cannot be acquired by vegetating in one little corner of the earth all one's lifetime.”
-				</p>
-			</div>
-				<div class="friends">
-					<img src="images/pic5.jpg">
-				</div>
-</section>
-
-<section class="lifestyle">
-	<div class="picture2">
-		<img src="images/img20.jpg">
-	</div>
-	<div class="lifestylename"> LIFESTYLE </div>
-	<div class="text2">
-		<p>	Love myself I do. Not everything, but I love the good as well as the bad. I love my crazy lifestyle, and I love my hard discipline. I love my freedom of speech and the way my eyes get dark when I'm tired. I love that I have learned to trust people with my heart, even if it will get broken. I am proud of everything that I am and will become.
-		</p>
-	</div>
-	<div class="verse">
-		<img src="images/img12.jpg">
-	</div>
-</section>
-
-<section class="music">
-	<div class="picture3">
-		<img src="images/blink.jpg">	
-	</div>
-		<div class="musicname"> MUSIC </div>
-			<div class="text3">
-				<p> Blackpink is my love, their music can convert my feeings to a happy me, blackpink is my stress reliever they gave me good mode everyday </p>
-			</div>
-<</section>
-
-<section class="me">
-	<div class="picture4">
-		<img src="images/img7.jpg">	
-	</div>
+	<section class="me">
+		<div class="picture4">
+			<img src="images/img7.jpg" alt="Avatar" style="width:400px">	
+		</div>
 		<div class="text4">
 			<h1> HELLO,
 				a bit about me!
 			</h1>
 		</div>
-				<div class="text5">
-					<p>
-						I am Via Saura Ventura, fierce and bold and currently studing at Jose Rizal University taking up Bachelor of Science Information Technology. 
+		<div class="text5">
+			<p> I am Via Saura Ventura, fierce and bold and currently studing at Jose Rizal University taking up Bachelor of Science Information Technology. 
+			Older in my one sister and a bestfriend to my mother and a buddy to my father, twinny with my friends
+			I choose to be friends with people who can understand me and accept me with who i am. </p>
+		</div>
+	</section>
 
-						Older in my one sister and a bestfriend to my mother and a buddy to my father, twinny with my friends
+	<section class="lifestyle">
+		<div class="picture2">
+			<img src="images/img20.jpg">
+		</div>
+		<div class="lifestylename"> LIFESTYLE </div>
+		<div class="text2">
+			<p>	Love myself I do. Not everything, but I love the good as well as the bad. I love my crazy lifestyle, and I love my hard discipline. I love my freedom of speech and the way my eyes get dark when I'm tired. I love that I have learned to trust people with my heart, even if it will get broken. I am proud of everything that I am and will become.</p>
+		</div>
+		<div class="verse">
+			<img src="images/img12.jpg">
+		</div>
+	</section>
 
-						I choose to be friends with people who can understand me and accept me with who i am.
+	<section class="music">
+		<div class="picture3">
+			<img src="images/blink.jpg">	
+		</div>
+		<div class="musicname"> MUSIC </div>
+		<div class="text3">
+			<p> Blackpink is my love, their music can convert my feeings to a happy me, blackpink is my stress reliever they gave me good mode everyday
 					</p>
 				</div>
+	</section>
+
+	<section class="travel">
+		<div class="picture1">
+			<img src="images/img1.jpg">
 		</div>
-</section>
-
-
-
-
-
+		<div class="travelname"> TRAVEL </div>
+		<div class="text1">
+			<p> “Wherever you go becomes a part of you somehow.” “Travel is fatal to prejudice, bigotry, and narrow-mindedness, and many of our people need it sorely on these accounts. Broad, wholesome, charitable views of men and things cannot be acquired by vegetating in one little corner of the earth all one's lifetime.” </p>
+		</div>
+		<div class="friends">
+			<img src="images/pic5.jpg">
+		</div>
+	</section>
 
 
 </body>
