add details and change position

--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
 	<section>
 		<nav class="pink">
 			<ul>
-				<a href="me.asp"> ABOUT</a> |
+				<a href="about.asp"> ABOUT</a> |
   				<a href="lifestyle.asp">LIFESTYLE</a> |
-  				<a href="music.asp">MUSIC</a> |
-  				<a href="travel.asp">TRAVEL</a> 
+  				<a href="travel.asp">TRAVEL</a> |
+  				<a href="contact.asp">CONTACT</a>
   			</ul>
 		</nav>
 	</section>
@@ -37,7 +37,7 @@
 		<div class="text5">
 			<p> I am Via Saura Ventura, fierce and bold and currently studing at Jose Rizal University taking up Bachelor of Science Information Technology. 
 			Older in my one sister and a bestfriend to my mother and a buddy to my father, twinny with my friends
-			I choose to be friends with people who can understand me and accept me with who i am. </p>
+			I choose to be friends with people who can understand me and accept me who i am. </p>
 		</div>
 	</section>
 
@@ -54,17 +54,6 @@
 		</div>
 	</section>
 
-	<section class="music">
-		<div class="picture3">
-			<img src="images/blink.jpg">	
-		</div>
-		<div class="musicname"> MUSIC </div>
-		<div class="text3">
-			<p> Blackpink is my love, their music can convert my feeings to a happy me, blackpink is my stress reliever they gave me good mode everyday
-					</p>
-				</div>
-	</section>
-
 	<section class="travel">
 		<div class="picture1">
 			<img src="images/img1.jpg">
@@ -76,8 +65,15 @@
 		<div class="friends">
 			<img src="images/pic5.jpg">
 		</div>
+		<div class="text6"> 
+			<p> My friends and I love to travel also to collect good memories because we want to photograph our bonding so we wont forget every single detail of it. </p>
+		</div>
 	</section>
 
+<section class="contact">
+	<div class="picture3">
+	</div>
+</section>
 
 </body>
 </html>
