change all the colors and concept

--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
 	<title> Personal Life</title>
 		<link rel="stylesheet" type="text/css" href="style.scss">
 			<link href="https://fonts.googleapis.com/css?family=Crafty+Girls" rel="stylesheet">
+			<link href="https://fonts.googleapis.com/css?family=Joti+One" rel="stylesheet">
 	</head>
 <body>
 
 	<section class="banner">
 		<div class="picture">
-			<img src="images/img2.jpg">
+			<img src="images/img11.jpg">
 		</div>
 		<div class="via">viasventura </div>
 	</section>
@@ -35,9 +36,8 @@
 			</h1>
 		</div>
 		<div class="text5">
-			<p> I am Via Saura Ventura, fierce and bold and currently studing at Jose Rizal University taking up Bachelor of Science Information Technology. 
-			Older in my one sister and a bestfriend to my mother and a buddy to my father, twinny with my friends
-			I choose to be friends with people who can understand me and accept me who i am. </p>
+			<p> I am Via Saura Ventura, fierce and bold and currently studing at Jose Rizal University taking up Bachelor of Science Information Technology.
+			20 and Older in my one sister and a bestfriend to my mother,a buddy to my father and twinny with my friends </p>
 		</div>
 	</section>
 
@@ -68,11 +68,16 @@
 		<div class="text6"> 
 			<p> My friends and I love to travel also to collect good memories because we want to photograph our bonding so we wont forget every single detail of it. </p>
 		</div>
+		<div class="friend2">
+			<img src="images/img3.jpg"> 
+		</div>
 	</section>
 
 <section class="contact">
-	<div class="picture3">
+	<div class="conbanner">
+		<h1> contact </h1>
 	</div>
+
 </section>
 
 </body>
