change color and add more

--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<title> Personal Life</title>
-		<link rel="stylesheet" type="text/css" href="style.scss">
+	<head>
+		<title> Personal Life</title>
+			<link rel="stylesheet" type="text/css" href="style.scss">
 			<link href="https://fonts.googleapis.com/css?family=Crafty+Girls" rel="stylesheet">
 			<link href="https://fonts.googleapis.com/css?family=Joti+One" rel="stylesheet">
+			<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	</head>
 <body>
 
@@ -21,6 +22,7 @@
 				<a href="about.asp"> ABOUT</a> |
   				<a href="lifestyle.asp">LIFESTYLE</a> |
   				<a href="travel.asp">TRAVEL</a> |
+  				<a href="education.asp">EDUCATION</a> |
   				<a href="contact.asp">CONTACT</a>
   			</ul>
 		</nav>
@@ -60,25 +62,49 @@
 		</div>
 		<div class="travelname"> TRAVEL </div>
 		<div class="text1">
+			<p> SUMMER MADNESS</p>
 			<p> “Wherever you go becomes a part of you somehow.” “Travel is fatal to prejudice, bigotry, and narrow-mindedness, and many of our people need it sorely on these accounts. Broad, wholesome, charitable views of men and things cannot be acquired by vegetating in one little corner of the earth all one's lifetime.” </p>
 		</div>
 		<div class="friends">
 			<img src="images/pic5.jpg">
 		</div>
-		<div class="text6"> 
-			<p> My friends and I love to travel also to collect good memories because we want to photograph our bonding so we wont forget every single detail of it. </p>
+		<div class="text6">
+			<p> My friends and I love to travel on summer to collect good memories coz' we always want to photograph our bonding so we wont forget every single detail of it. This picture taken at Laguna resort Sun City </p>
 		</div>
 		<div class="friend2">
 			<img src="images/img3.jpg"> 
 		</div>
 	</section>
 
-<section class="contact">
-	<div class="conbanner">
-		<h1> contact </h1>
-	</div>
 
-</section>
+	<section class="education">
+		<div class="jru">
+			<img src="images/img8.jpg">	
+		</div>
+		<div class="educname"> EDUCATION</div>
+		<div class="text7">
+			<p> José Rizal University (JRU) (Formerly José Rizal College / JRC) is a non-sectarian, non-stock private educational institution. It is located at Shaw Boulevard, Mandaluyong City, Philippines. It was founded in 1919 by Vicente Fabella, who was the first Philippine Certified Accountant.</p>
+
+			<p> I am a Rizalian since 2014, my friend Alvin Abundo a PBA player gave me idea about this university. I took up Bachelor of Science Infomation Technolgy </p>
+		</div>
+		<div class="memories">
+			<img src="">
+		</div>
+	</section>
+
+	<section class="contact">
+		<div class="conbanner">
+			<h1> contact me on </h1>
+			<nav class="follow">
+				<ul>
+					<a href="facebook.asp">Facebook: viasauraventura</a>
+	  				<a href="twitter.asp">Twitter: viaharhar</a> </li>
+	  				<a href="instagram.asp">Instagram: viasventura</a></li>
+	  				<a href="email.asp">Email: via.ventura19@gmail.com</a> </li>
+	  			</ul>
+			</nav>
+		</div>
+	</section>
 
 </body>
 </html>
