--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<div class="picture">
 			<img src="images/img11.jpg">
 		</div>
-		<div class="via">viasventura </div>
+			<div class="via">viasventura </div>
 	</section>
 
 	<section>
@@ -32,48 +32,48 @@
 		<div class="picture4">
 			<img src="images/img7.jpg" alt="Avatar" style="width:400px">	
 		</div>
-		<div class="text4">
-			<h1> HELLO,
-				a bit about me!
-			</h1>
-		</div>
-		<div class="text5">
-			<p> I am Via Saura Ventura, fierce and bold and currently studing at Jose Rizal University taking up Bachelor of Science Information Technology.
-			20 and Older in my one sister and a bestfriend to my mother,a buddy to my father and twinny with my friends </p>
-		</div>
+			<div class="text4">
+				<h1>  ~ HELLO,
+					a bit about me! ~
+				</h1>
+			</div>
+				<div class="text5">
+				<p> I am Via Saura Ventura, fierce and bold and currently studing at Jose Rizal University taking up Bachelor of Science Information Technology.
+				20 and Older in my one sister and a bestfriend to my mother,a buddy to my father and twinny with my friends and i am from the SOuth girl </p>
+			</div>
 	</section>
 
 	<section class="lifestyle">
 		<div class="picture2">
 			<img src="images/img20.jpg">
 		</div>
-		<div class="lifestylename"> LIFESTYLE </div>
-		<div class="text2">
-			<p>	Love myself I do. Not everything, but I love the good as well as the bad. I love my crazy lifestyle, and I love my hard discipline. I love my freedom of speech and the way my eyes get dark when I'm tired. I love that I have learned to trust people with my heart, even if it will get broken. I am proud of everything that I am and will become.</p>
-		</div>
-		<div class="verse">
-			<img src="images/img12.jpg">
-		</div>
+			<div class="lifestylename"> LIFESTYLE </div>
+				<div class="text2">
+					<p>	Love myself I do. Not everything, but I love the good as well as the bad. I love my crazy lifestyle, and I love my hard discipline. I love my freedom of speech and the way my eyes get dark when I'm tired. I love that I have learned to trust people with my heart, even if it will get broken. I am proud of everything that I am and will become.</p>
+				</div>
+				<div class="verse">
+					<img src="images/img12.jpg">
+				</div>
 	</section>
 
 	<section class="travel">
 		<div class="picture1">
 			<img src="images/img1.jpg">
 		</div>
-		<div class="travelname"> TRAVEL </div>
-		<div class="text1">
-			<p> SUMMER MADNESS</p>
-			<p> “Wherever you go becomes a part of you somehow.” “Travel is fatal to prejudice, bigotry, and narrow-mindedness, and many of our people need it sorely on these accounts. Broad, wholesome, charitable views of men and things cannot be acquired by vegetating in one little corner of the earth all one's lifetime.” </p>
-		</div>
+			<div class="travelname"> TRAVEL </div>
+				<div class="text1">
+					<p> SUMMER MADNESS</p>
+					<p> “Wherever you go becomes a part of you somehow.” “Travel is fatal to prejudice, bigotry, and narrow-mindedness, and many of our people need it sorely on these accounts. Broad, wholesome, charitable views of men and things cannot be acquired by vegetating in one little corner of the earth all one's lifetime.” </p>
+				</div>
 		<div class="friends">
 			<img src="images/pic5.jpg">
 		</div>
-		<div class="text6">
-			<p> My friends and I love to travel on summer to collect good memories coz' we always want to photograph our bonding so we wont forget every single detail of it. This picture taken at Laguna resort Sun City </p>
-		</div>
-		<div class="friend2">
-			<img src="images/img3.jpg"> 
-		</div>
+			<div class="text6">
+				<p> My friends and I love to travel on summer to collect good memories coz' we always want to photograph our bonding so we wont forget every single detail of it. This picture taken at Laguna resort Sun City </p>
+			</div>
+			<div class="friend2">
+				<img src="images/img3.jpg"> 
+			</div>
 	</section>
 
 
@@ -81,13 +81,13 @@
 		<div class="jru">
 			<img src="images/img8.jpg">	
 		</div>
-		<div class="educname"> EDUCATION</div>
-		<div class="text7">
-			<p> José Rizal University (JRU) (Formerly José Rizal College / JRC) is a non-sectarian, non-stock private educational institution. It is located at Shaw Boulevard, Mandaluyong City, Philippines. It was founded in 1919 by Vicente Fabella, who was the first Philippine Certified Accountant.</p>
+			<div class="educname"> EDUCATION</div>
+			<div class="text7">
+				<p> José Rizal University (JRU) (Formerly José Rizal College / JRC) is a non-sectarian, non-stock private educational institution. It is located at Shaw Boulevard, Mandaluyong City, Philippines. It was founded in 1919 by Vicente Fabella, who was the first Philippine Certified Accountant.</p>
 
-			<p> I am a Rizalian since 2014, my friend Alvin Abundo a PBA player gave me idea about this university. I took up Bachelor of Science Infomation Technolgy </p>
-		</div>
-		<div class="memories">
+				<p> I am a Rizalian since 2014, my friend Alvin Abundo a PBA player gave me idea about this university. I took up Bachelor of Science Infomation Technolgy </p>
+			</div>
+				<div class="memories">
 			<img src="">
 		</div>
 	</section>
@@ -95,16 +95,19 @@
 	<section class="contact">
 		<div class="conbanner">
 			<h1> contact me on </h1>
-			<nav class="follow">
-				<ul>
-					<a href="facebook.asp">Facebook: viasauraventura</a>
-	  				<a href="twitter.asp">Twitter: viaharhar</a> </li>
-	  				<a href="instagram.asp">Instagram: viasventura</a></li>
-	  				<a href="email.asp">Email: via.ventura19@gmail.com</a> </li>
-	  			</ul>
-			</nav>
+				<nav class="follow">
+					<ul>
+						<a href="facebook.asp">Facebook: viasauraventura</a>
+		  				<a href="twitter.asp">Twitter: viaharhar</a> </li>
+		  				<a href="instagram.asp">Instagram: viasventura</a></li>
+		  				<a href="email.asp">Email: via.ventura19@gmail.com</a> </li>
+		  			</ul>
+				</nav>
 		</div>
 	</section>
 
+	<footer> COPYRIGHT 2018 </footer>
+
 </body>
 </html>
+
